Fix #126199: Various brushes deform base mesh on non-basis shape key

When restoring the orig_position values for certain brushes, we need to
apply similar logic and avoid updating the base mesh if we are sculpting
on a non-basis shape key.